--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>title</title>
+	<title>{{ page.title }}</title>
 </head>
 
 <body>
-	body
+	{{ page.content }}
 </body>
 
 </html>
